syntax = "proto3";

option csharp_namespace = "Grpc";

package employeespr;

service EmployeesProto {
    
    rpc GetAllEmployee (GetAllRequest) returns (stream EmployeeDataModel);
  }

  message GetAllRequest {

  }
  
  // The response message containing the greetings.
  message EmployeeDataModel{
    string id = 1;
    string lastname = 2;
    string firstname = 3;
    string departmentId = 4;
  }