syntax = "proto3";
package identity;
import "Protos/shared.proto";
option csharp_namespace = "Grpc.Protos";


service IdentityProto{
    rpc Register (IdentityRequest) returns (AuthenticationResponse);
    rpc Login (IdentityRequest) returns (AuthenticationResponse);
}

  //models
  message AuthenticationResponse{
      bool isSucces = 1;
      UserResponse user = 2;
      shared.ErrorModel error = 3;

  }

  message UserResponse{
    string email = 1;
    string token = 2;    
  }

  message IdentityRequest{
    string email = 1;
    string password = 2;    
  }